[project]
name = "darkatlas-asset-management"
version = "0.1.0"
description = "DarkAtlas Asset Surface Asset Management platform with AI-driven enhancements"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.28",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pydantic[email]>=2.6.4",
    "pydantic-settings>=2.2.1",
    "pyjwt[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",
    "slowapi>=0.1.9",
    "langchain>=0.1.12",
    "langchain-openai>=0.0.9",
    "langchain-community>=0.0.28",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=24.2.0",
    "ruff>=0.3.3",
]
